--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lisu+Bosa&display=swap');
 
 html,
 body {
@@ -21,11 +22,13 @@ body {
 }
 
 #q-format {
-    font-weight: bold;
+    font-family: 'Lisu Bosa', serif;
+    padding: 5px 14px;
+    text-align: center;
     background-color: aqua;
-    font-size: 45px;
+    font-size: 50px;
+    border-radius: 50%;
     border: 2px solid black;
-    border-radius: 100px;
 }
 
 .container {
@@ -65,5 +68,9 @@ body {
 
 .footer-p {
     position: absolute;
-    bottom: 0px;
+    bottom: 2px;
+}
+
+.footer-p span i {
+    color: red;
 }
